# ML-API-and-Monitoring-with-BentoML-and-Prometheus

./: .gitignore  Dockerfile  README.md  docker-compose.yml  prometheus.yml  pyproject.toml
.github/workflows/: cd_workflow.yml  ci_workflow.yml
src/california_housing_api/: api_config.py  data_loading.py  model_training.py  service.py  verify.py
tests/: test_api.py
